# SnackSndfileExt

./: AUTHORS  Makefile.am  NEWS  README  autogen.sh  configure.ac  pkgIndex.tcl.in  snack_sndfile_ext.c  snack_sndfile_ext.tcl  snack_sndfile_ext.tcl.in  sndfile.plug  test.tcl
config/m4/: snack.m4
